--- a/app/src/main/res/layout/activity_table_layout.xml
+++ b/app/src/main/res/layout/activity_table_layout.xml
@@ -1,6 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:stretchColumns="0,1,2,3">
+
+        <TableRow>
+
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar2"
+                android:layout_span="4"
+                android:background="#212121"
+                android:elevation="6dp"
+                app:title="Crazy Layout"
+                app:titleTextColor="@color/white"
+                />
+        </TableRow>
+
+    <TableRow
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_span="3"
+            android:background="@color/design_default_color_secondary_variant"
+            android:text="Producto"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_span="1"
+            android:background="@color/design_default_color_secondary_variant"
+            android:text="Subtotal"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            />
+    </TableRow>
+
+    <TableRow
+      android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
+
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_span="3"
+            android:text="Jabón de manos x 1"
+            android:textColor="@color/material_dynamic_neutral30"
+            />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_span="1"
+            android:text="$2"
+            android:textColor="@color/material_dynamic_neutral30"
+            android:textAlignment="center"
+            />
+    </TableRow>
+    <TableRow
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
+
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_span="3"
+            android:text="Shampoo Monster x 1"
+            android:textColor="@color/material_dynamic_neutral30"
+            />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_span="1"
+            android:text="$10"
+            android:textColor="@color/material_dynamic_neutral30"
+            android:textAlignment="center"
+            />
+    </TableRow>
+    <TableRow
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
+
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_span="3"
+            android:text="Pastas Duria x 2"
+            android:textColor="@color/material_dynamic_neutral30"
+            />
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_span="1"
+            android:text="$18"
+            android:textColor="@color/material_dynamic_neutral30"
+            android:textAlignment="center"
+            />
+    </TableRow>
+    <TableRow
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
+
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_span="3"
+            android:text="Detergente Limpiadin x 1"
+            android:textColor="@color/material_dynamic_neutral30"
+            />
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_span="1"
+            android:text="$13,4"
+            android:textColor="@color/material_dynamic_neutral30"
+            android:textAlignment="center"
+            />
+    </TableRow>
+    <TableRow
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
+
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="wrap_content"
+            android:layout_height="3dp"
+            android:layout_span="4"
+            android:background="@color/material_dynamic_neutral40" />
+    </TableRow>
+
+
+
+</TableLayout>
